--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # DB info
 src/main/resources/dbconfig.properties
 
-# Created by https://www.toptal.com/developers/gitignore/api/macos,windows,java,eclipse,maven
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,java,eclipse,maven
+# Created by https://www.toptal.com/developers/gitignore/api/macos,windows,java,eclipse
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,java,eclipse
 
 ### Eclipse ###
 .metadata
@@ -129,25 +129,6 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
-### Maven ###
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
-.mvn/wrapper/maven-wrapper.jar
-
-# Eclipse m2e generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
-
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -174,4 +155,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,windows,java,eclipse,maven
+# End of https://www.toptal.com/developers/gitignore/api/macos,windows,java,eclipse
+/target/
