--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # DB info
 src/main/resources/dbconfig.properties
 
+## target
+target/
+
 # Created by https://www.toptal.com/developers/gitignore/api/java,eclipse
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,eclipse
 
